tests/fixtures/errors/bare_bool_binding.z
# E0300: bare `bool` does not construct; its arms are the literals.
main: function is {
    b: bool
    print "\{b}"
}
